-------------------------------------
-------------------------------------
Fixed Console tab bug when a virtual machine has a range or list
of RDP ports configured.

Default host in location setting is now 127.0.0.1 instead of 
"localhost" to get around problems when "localhost" resolves to
an IPv6 address.

Fixed bug in file / folder browser when file extension is not
lower case.

Added missing "Stop" to english translation file.

-------------------------------------
		0.5 - 2010-08-10
-------------------------------------
Fixed some English translations.

Added fr_fr and de_de languages. 

Fixed top toolbar and Virtual Media Manger translation bugs.

Fixed OSE startup bug and removed console tab when OSE is
detected.

Fixed Host Details bug that would not display the VirtualBox
host server's details when it is selected in the list of vms.

Fixed bug in File -> Preferences that would not correctly
reflect a change made to any prefrences on the General tab.

Workaround for Console tab resize bug that would disconnect from
an existing console session when the window was resized. Now, it
automatically reconnects after a window resize event.

Applied UI enhancements patch supplied by compuwizard123
http://code.google.com/u/compuwizard123/

Host details now include VirtualBox version.

-------------------------------------
		0.4 - 2010-07-24
-------------------------------------
Fixed numerous translation bugs.

Fixed bug that would not allow the addition of more than 4
storage controller types in VM Settings.

Changed WSDL cache to use memory only instead of both memory
and disk. (PHP SoapClient WSDL_CACHE_MEMORY option).

RDP host (for console tab and details tab RDP links) is now
selected in the following order:
	1) VM Configured host (would have to be set with VboxManage)
	2) rdpHost setting in config.php
	3) host in location setting of config.php
	*) if host is 'localhost' or '127.0.0.1' use web browser
		location's URL host as last resort
